packages/cashc/test/compiler/InvalidParameterTypeError/checkdatasig_string.cash
contract Test() {
    function hello(sig s, pubkey p) {
        require(checkDataSig(s, "Hello", p));
    }
}
